  See menu "File" --> "Global Preferences" --> tab "SQL formatting" --> "Column list split behavior"

Netezza SYNONYM support added and enhanced 
  Thanks to Richard Kooijman for the patch

New high definition icon
  Thanks to Richard Kooijman for the patch


Graph plugin: Added a 'NOT LIKE' operator to Query builder filter.

Bug fixes:

#1287 On MacOS, the launcher script contains a hard-coded reference to Contents/Resources/Java
  Thanks to Peter G. Horvath for the fix.

Old application icon was shown Unix/Linux OSes.

#618 sqlparam plugin asks for commented variables  is now also fixed for /* */ style comments

#1276 DB Copy Plugin: An error occurred when a table was copied and the table name needed to be double quoted.

Session tabs wheren't selected on mouse click. This bug occurred since the "Tabs can be closed by middle mouse click" feature.

Reconnecting (ctrl alt t) failed on Vertica DB with error:
 java.lang.ClassCastException: net.sourceforge.squirrel_sql.fw.gui.SQLCatalogsComboBox$NoCatalogPlaceHolder cannot be cast to java.lang.String
  	at net.sourceforge.squirrel_sql.client.gui.session.CatalogsPanel.getSelectedCatalog(CatalogsPanel.java:184)
  	at net.sourceforge.squirrel_sql.client.gui.session.SessionPanel.getSelectedCatalogFromCatalogsComboBox(SessionPanel.java:513)
  	at net.sourceforge.squirrel_sql.client.session.Session.reconnect(Session.java:561)

#1273 Session, when in detached frame, closes although close is not confirmed.

#1267 NullPointerException on Create Data Script

Postgres plugin:
  Trigger details tab was still using the deprecated condition_timing column in the trigger query,
  causing PSQLException: ERROR: column "condition_timing" does not exist and preventing tab from displaying.
   Thanks to Joseph Dillman for the fix.


#1263 DB copy from MS SQL to HSQLDB with NVARCHAR column leads to no dialect mapping error
   Fixed HSQLDB dialect as suggested in the bug.
